--- a/_quarto.yml
+++ b/_quarto.yml
@@ -5,7 +5,7 @@ project:
     - "*.qmd"
 
 website:
-  site-url: "https://hdat9700.cbdrh.med.unsw.edu.au"
+  site-url: "https://hds-hub.cbdrh.med.unsw.edu.au/"
   favicon: images/favicon.ico
   twitter-card: true
   open-graph: true
@@ -58,7 +58,7 @@ format:
     toc: true
     link-external-icon: true
     link-external-newwindow: true
-    link-external-filter: ^(?:http:|https:)\/\/hdat9700\.cbdrh\.med\.unsw\.edu\.au\/custom
+    link-external-filter: ^(?:http:|https:)\/\/hds\-hub\.cbdrh\.med\.unsw\.edu\.au\/custom
 
 margin-header: |
   ![](/images/Landscape__1.Col_Pos_CBDRH.jpg)
