Added giscus comments

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -58,10 +58,14 @@ format:
     toc: true
     link-external-icon: true
     link-external-newwindow: true
-    link-external-filter: '^(?:http:|https:)\/\/hds\-hub\.cbdrh\.med\.unsw\.edu\.au\/custom'
+    link-external-filter: '^(?:http:|https:)\/\/hds\-hub\.cbdrh\.med\.unsw\.edu\.au\/**'
 
 margin-header: |
   ![](/images/Landscape__1.Col_Pos_CBDRH.jpg)
 
 resources:
   - CNAME
+
+comments:
+  giscus:
+    repo: hds-teaching-cbdrh-med-unsw-edu-au/hds-blog-discussion
