commented out link-external-filter seems to cause issues

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -54,12 +54,12 @@ format:
     theme:
     - cosmo
     - custom.scss
-    css: styles.css
     toc: true
     link-external-icon: true
     link-external-newwindow: true
-    link-external-filter: '^(?:http:|https:)\/\/hds\-hub\.cbdrh\.med\.unsw\.edu\.au\/**'
+    # link-external-filter: '^(?:http:|https:)\/\/hds\-hub\.cbdrh\.med\.unsw\.edu\.au\/**'
     footnotes-hover: true
+    css: styles.css
 
 margin-header: |
   ![](/images/Landscape__1.Col_Pos_CBDRH.jpg)
